# rust-parquet-polars

./: Cargo.toml  data.json  output.parquet
src/: main.rs
