[package]
name = "rust_parquet_with_polars"
version = "0.1.0"
edition = "2021"

[dependencies]
polars = { version = "0.43.1", features = ["parquet", "json"] }
aws-config = { version = "1.0.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.45.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
